Add webpage design

--- a/index.html
+++ b/index.html
@@ -1,30 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta
-      name="MorstenIllustration"
-      content="Anika Mortensen - Illustration "
-    />
-    <title>Anika Mortensen Illustrations</title>
-    <link rel="stylesheet" href="stylesheet.css">
-</head>
-<body>
-    <nav>
-        <div className="container-fluid">
-            <div className="col-auto"><a href="index.html"></a></div>
-            <div className="col-auto">
-            <div className="collapse navbar-collapse text-start" id="navcol-1">
-                <ul className="navbar-nav fs-4">
-                    <li className="nav-item"><a className="nav-link active" href="/">Home</a></li>
-                    <li className="nav-item"><a className="nav-link" href="/portfolio.html">Portfolio</a></li>
-                    <li className="nav-item"><a className="nav-link" href="/about.html">About</a></li>
-                </ul>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta
+        name="MorstenIllustration"
+        content="Anika Mortensen - Illustration "
+        />
+        <title>Anika Mortensen Illustrations</title>
+        <link rel="stylesheet" href="stylesheet.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <div class="nav">
+            <ul>
+                <li>HOME</li>
+                <li>ABOUT</li>
+                <li>
+                    <img class="logo" src="images/logo.PNG" alt="logo"/>
+                </li>
+                <li>PROJECTS</li>
+                <li>INSTAGRAM</li>
+            </ul>
+        </div>
+        <div class="hero-section"> 
+            <div class="row"> 
+                <div class="container">
+                    <img src="images/sampleImage.PNG" alt=""/>
+                    <div class="middle">
+                        <div class="text"> sample text</div>
+                    </div>
+                </div> 
+                <div class="container">
+                    <img src="images/sampleImage.PNG" alt=""/>
+                    <div class="middle">
+                        <div class="text"> sample text</div>
+                    </div>
+                </div>
+                <div class="container">
+                    <img src="images/sampleImage.PNG" alt=""/>
+                    <div class="middle">
+                        <div class="text"> sample text</div>
+                    </div>
+                </div>
+                <div class="container">
+                    <img src="images/sampleImage.PNG" alt=""/>
+                    <div class="middle">
+                        <div class="text"> sample text</div>
+                    </div>
+                </div>
+                <div class="container">
+                    <img src="images/sampleImage.PNG" alt=""/>
+                    <div class="middle">
+                        <div class="text"> sample text</div>
+                    </div>
+                </div>
+            </div>
+            <div class="row"> 
+                <div class="container">
+                    <img src="images/sampleImage.PNG" alt=""/>
+                    <div class="middle">
+                        <div class="text"> sample text</div>
+                    </div>
+                </div> 
+                <div class="container">
+                    <img src="images/sampleImage.PNG" alt=""/>
+                    <div class="middle">
+                        <div class="text"> sample text</div>
+                    </div>
+                </div>
+                <div class="container">
+                    <img src="images/sampleImage.PNG" alt=""/>
+                    <div class="middle">
+                        <div class="text"> sample text</div>
+                    </div>
+                </div>
+                <div class="container">
+                    <img src="images/sampleImage.PNG" alt=""/>
+                    <div class="middle">
+                        <div class="text"> sample text</div>
+                    </div>
+                </div>
+                <div class="container">
+                    <img src="images/sampleImage.PNG" alt=""/>
+                    <div class="middle">
+                        <div class="text"> sample text</div>
+                    </div>
+                </div>
             </div>
         </div>
-    </nav>
-    <p> Willkommen in meinem Portfolio! Hier findet ihr meine arbeiten und kreative Gedankenexperimente. </p>
-</body>
+
+        <div class="footer">
+            <p> Contact me here: ...</p>
+        </div>
+    </body>
 </html>
