--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         content="Anika Mortensen - Illustration "
         />
         <title>Anika Mortensen Illustrations</title>
-        <link rel="stylesheet" href="/stylesheet.css">
+        <link rel="stylesheet" href="/main.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
