--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         name="MorstenIllustration"
         content="Anika Mortensen - Illustration "
         />
-        <title>Anika Mortensen Illustrations</title>
-        <link rel="stylesheet" href="/main.css">
+        <link rel="stylesheet"  type="text/css" href="css/main.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+        <title>Anika Mortensen Illustrations</title>
     </head>
     <body>
         <div class="nav">
