--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li>HOME</li>
                 <li>ABOUT</li>
                 <li>
-                    <img class="logo" src="images/logo.PNG" alt="logo"/>
+                    <img class="logo" src="images/logo-modified.png" alt="logo"/>
                 </li>
                 <li>PROJECTS</li>
                 <li>INSTAGRAM</li>
