--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <body>
         <div class="nav">
             <ul>
-                <li>HOME</li>
-                <li>ABOUT</li>
+                <li><a href="/">HOME</a></li>
+                <li><a href="#footer">ABOUT</a></li>
                 <li>
                     <img class="logo" src="images/logo-modified.png" alt="logo"/>
                 </li>
-                <li>PROJECTS</li>
-                <li>INSTAGRAM</li>
+                <li><a href="/projects">PROJECTS</a></li>
+                <li><a href="https://www.instagram.com/eos_maeva/">INSTAGRAM</a></li>
             </ul>
         </div>
         <div class="hero-section"> 
@@ -92,8 +92,9 @@
                 </div>
             </div>
         </div>
-
-        <div class="footer">
+        <div class="spacer">
+        </div>
+        <div id="footer" class="footer">
             <p> Contact me here: ...</p>
         </div>
     </body>
