--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <div class="nav">
             <ul>
                 <li><a href="/">HOME</a></li>
-                <li><a href="#footer">ABOUT</a></li>
+                <li><a href="/contact.html">ABOUT</a></li>
                 <li>
                     <img class="logo" src="images/logo-modified.png" alt="logo"/>
                 </li>
-                <li><a href="/projects">PROJECTS</a></li>
+                <li><a href="/projects.html">PROJECTS</a></li>
                 <li><a href="https://www.instagram.com/eos_maeva/">INSTAGRAM</a></li>
             </ul>
         </div>
@@ -92,8 +92,7 @@
                 </div>
             </div>
         </div>
-        <div class="spacer">
-        </div>
+        <div class="spacer"></div>
         <div id="footer" class="footer">
             <p> Contact me here: ...</p>
         </div>
