--- a/projects.html
+++ b/projects.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet"  type="text/css" href="css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+    <title>Project</title>
 </head>
 <body>
+    <div class="nav">
+        <ul>
+            <li><a href="/">HOME</a></li>
+            <li><a href="/contact.html">ABOUT</a></li>
+            <li>
+                <img class="logo" src="images/logo-modified.png" alt="logo"/>
+            </li>
+            <li><a href="/projects.html">PROJECTS</a></li>
+            <li><a href="https://www.instagram.com/eos_maeva/">INSTAGRAM</a></li>
+        </ul>
+    </div>
     <p>Coming soon, please be patient</p>
 </body>
 </html>
