--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
         <div class="spacer"></div>
         <div id="footer" class="footer">
-            <p> Contact me here: ...</p>
+            <p> 2022 Anika Mortensen. All Rights Reserved</p>
         </div>
     </body>
 </html>
