--- a/index.html
+++ b/index.html
@@ -29,65 +29,65 @@
         <div class="hero-section"> 
             <div class="row"> 
                 <div class="container">
-                    <img src="images/sampleImage.PNG" alt=""/>
+                    <img src="images/Grundbedürfnisse/Grundbedürfnisse 1.jpg" alt=""/>
                     <div class="middle">
-                        <div class="text"> sample text</div>
+                        <div class="text"> Grundbedürfnisse </div>
                     </div>
                 </div> 
                 <div class="container">
-                    <img src="images/sampleImage.PNG" alt=""/>
+                    <img src="images/Grundbedürfnisse/Grundbedürfnisse II.jpg" alt=""/>
                     <div class="middle">
                         <div class="text"> sample text</div>
                     </div>
                 </div>
                 <div class="container">
-                    <img src="images/sampleImage.PNG" alt=""/>
+                    <img src="images/Grundbedürfnisse/Grundbedürfnisse III.jpg" alt=""/>
                     <div class="middle">
-                        <div class="text"> sample text</div>
+                        <div class="text"> Grundbedürfnisse </div>
                     </div>
                 </div>
                 <div class="container">
-                    <img src="images/sampleImage.PNG" alt=""/>
+                    <img src="images/Grundbedürfnisse/Grundbedürfnisse  VII.jpg" alt=""/>
                     <div class="middle">
-                        <div class="text"> sample text</div>
+                        <div class="text"> Grundbedürfnisse </div>
                     </div>
                 </div>
                 <div class="container">
-                    <img src="images/sampleImage.PNG" alt=""/>
+                    <img src="images/Grundbedürfnisse/Grundbedürfnisse  VIII.jpg" alt=""/>
                     <div class="middle">
-                        <div class="text"> sample text</div>
+                        <div class="text"> Grundbedürfnisse </div>
                     </div>
                 </div>
             </div>
             <div class="row"> 
                 <div class="container">
-                    <img src="images/sampleImage.PNG" alt=""/>
+                    <img src="images/Grundbedürfnisse/Grundbedürfnisse  VIIII.jpg" alt=""/>
                     <div class="middle">
-                        <div class="text"> sample text</div>
+                        <div class="text"> Grundbedürfnisse </div>
                     </div>
                 </div> 
                 <div class="container">
-                    <img src="images/sampleImage.PNG" alt=""/>
+                    <img src="images/Grundbedürfnisse/Grundbedürfnisse  X.jpg" alt=""/>
                     <div class="middle">
-                        <div class="text"> sample text</div>
+                        <div class="text"> Grundbedürfnisse </div>
                     </div>
                 </div>
                 <div class="container">
-                    <img src="images/sampleImage.PNG" alt=""/>
+                    <img src="images/Grundbedürfnisse/Grundbedürfnisse  XI.jpg" alt=""/>
                     <div class="middle">
-                        <div class="text"> sample text</div>
+                        <div class="text"> Grundbedürfnisse </div>
                     </div>
                 </div>
                 <div class="container">
-                    <img src="images/sampleImage.PNG" alt=""/>
+                    <img src="images/Grundbedürfnisse/Grundbedürfnisse  XII.jpg" alt=""/>
                     <div class="middle">
-                        <div class="text"> sample text</div>
+                        <div class="text"> Grundbedürfnisse </div>
                     </div>
                 </div>
                 <div class="container">
-                    <img src="images/sampleImage.PNG" alt=""/>
+                    <img src="images/Grundbedürfnisse/Grundbedürfnisse  XIII.jpg" alt=""/>
                     <div class="middle">
-                        <div class="text"> sample text</div>
+                        <div class="text"> Grundbedürfnisse </div>
                     </div>
                 </div>
             </div>
