--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="container">
                     <img src="images/Grundbedürfnisse/Grundbedürfnisse II.jpg" alt=""/>
                     <div class="middle">
-                        <div class="text"> sample text</div>
+                        <div class="text"> Grundbedürfnisse </div>
                     </div>
                 </div>
                 <div class="container">
